# afront

./: readme.md
afront/: CMakeLists.txt  FLF_io.cpp  FLF_io.h  FLF_structs.h  MarchingCubes.cpp  PC_io.cpp  PC_io.h  common.h  conekdtree.h  crease.cpp  crease.h  edgeflipper.cpp  edgeflipper.h  front.cpp  front.h  guidance.cpp  guidance.h  interval.h  lls_wrapper.h  lsqr.cpp  lsqr.h  main.cpp  output_controller_gui.cpp  output_controller_gui.h  output_controller_hhm.cpp  output_controller_hhm.h  output_controller_obj.cpp  output_controller_obj.h  output_controller_sma.cpp  output_controller_sma.h  parallel.h  sfcurve.h  spline.h  triangulate_csg.cpp  triangulate_csg.h  triangulate_iso.cpp  triangulate_iso.h  triangulate_mesh.cpp  triangulate_mesh.h  triangulate_mls.cpp  (+6 more)
gtb/: CMakeLists.txt  common.hpp  gtb.cpp  gtb.hpp  readme.txt  stlext.h  unix.hpp  windows.hpp
gtb/Windowing/: wclass.cpp  wclass.h  windowing.h
gtb/debug/: debug.cpp  debug.hpp  test_debug.cpp
gtb/error/: err.cpp  err.h  error.cpp  error.hpp  test_error.cpp
gtb/graphics/: PlaneTransformation.cpp  PlaneTransformation.h  RSTPlane.hpp  box2.cpp  box2.hpp  box3.cpp  box3.hpp  camera.cpp  camera.hpp  camera_path.cpp  camera_path.hpp  circle3.cpp  circle3.hpp  color_rgb.cpp  color_rgb.hpp  cone.cpp  cone.hpp  coordinate_system.cpp  coordinate_system.hpp  graphics.cpp  graphics.hpp  icosahedron.cpp  icosahedron.hpp  image.cpp  image.hpp  image_float.cpp  image_float.hpp  image_tile.cpp  image_tile.hpp  image_tile_set.cpp  image_tile_set.hpp  image_viewer.cpp  imageio.cpp  (+89 more)
lib/mlslib/: CMakeLists.txt  CProjection.cpp  CProjection.h  ReadMe.txt  knn.cpp  knn.h  mlslib.h  mlslibdefs.h  poly.cpp  poly.h  poly1.cpp  poly1.h  poly2.cpp  poly2.h  stdafx.cpp  stdafx.h  weight.h
lib/mlslib/NR/: nr.h  nrutil.cpp  nrutil.h  sobseq.cpp
lib/mlslib/projectall/: ReadMe.txt  projectall.cpp  stdafx.cpp  stdafx.h
lib/viewer/: CMakeLists.txt  debug_draw.cpp  debug_draw.h  trackball.cpp  trackball.h  viewer.cpp  viewer.h
sm_viewer/: sm_viewer.cpp
(+189 files in other folders)
